这个是加上了发送和接收的程序

--- a/环境搭建.md
+++ b/环境搭建.md
@@ -4,24 +4,35 @@ ubuntu版本：18.04
 dpdk版本：19.08(注意不是19.08.2也不是19.08.1)
 
 #### 2、将dpdk文件解压
+```shell 
 将文件放至/home/uesr/目录下并进行解压
   tar xf dpdk.tar.gz
   cd dpdk
+```
 #### 3、安装3个依赖
+```shell
 sudo apt-get install numactl
 sudo apt-get install libnuma-dev
 sudo apt-get install net-tools
+```
 #### 4、添加网卡并将网卡类型改成vmxnet3(支持多队列网卡)
 添加网卡：虚拟机里面添加网络适配器即可
 修改vmxnet3:在系统虚拟机安装位置里面找到vmx配置文件将e1000改成vmxnet3,并将初始的网络适配器改成桥接模式用来作为dpdk绑定的网卡
 #### 5、挂载大页内存
+```shell
 sudo vi /etc/default/grub 
 #将GRUB_CMDLINE_LINUX重添加：default_hugepagesz=1GB hugepagesz=1G hugepages=2
 sudo update-grub
 reboot
+```
 #### 6、配置RTE_SDK以及RTE_TARGET环境变量
+```shell
+sudo vim ~/.bashrc
+#添加
 export RTE_SDK=/home/mashuai/dpdk-19.08
 export RTE_TARGET=x86_64-native-linux-gcc
+source ~/.bashrc
+```
 #### 6、进入dpdk的目录执行./dpdk-setup.sh
 #### 7、绑定网卡（两种方法）
 #方法一
@@ -61,10 +72,3 @@ hello from core 0
 备注：dpdk的使用场景
 虚拟化网卡，绕过内核从而提升性能
 在防火墙那边进行流量和数据的转发
-
-
-
-
-
-
-
